# api/user_api.py
@@ -2,7 +2,7 @@ from flask import Blueprint
 from flask import request, g, session
 from flask import jsonify
 
-from api.utils.authenticate_user import authentication
+from api.utils.authenticate_user import authentication, jwt_token_required, logout
 from api.validators import users_requests_validation as validators
 from db.models import user as user_repo
 
@@ -11,7 +11,8 @@ user_api = Blueprint(name='user_api', import_name=__name__, url_prefix='/api')
 
 @user_api.route("/signIn", methods=["POST"])
 def user_sign_in():
-    data = validators.sign_validation(request.args.get('login'), request.args.get('password'))
+    body = request.json
+    data = validators.sign_validation(body.get('login'), body.get('password'))
 
     if (password := data.get("password")) and (login := data.get("login")):
         user = user_repo.get_user(
@@ -28,7 +29,8 @@ def user_sign_in():
 
 @user_api.route("/signUp", methods=["POST"])
 def user_sign_up():
-    registration_data = validators.sign_validation(request.args.get("login"), request.args.get("password"))
+    body = request.json
+    registration_data = validators.sign_validation(body.get("login"), body.get("password"))
 
     if (password := registration_data.get("password")) and (login := registration_data.get("login")):
         name = request.args.get("name")
@@ -39,13 +41,13 @@ def user_sign_up():
         if isinstance(user, dict):
             return user, 400
         else:
-            return user.to_json()
+            return authentication(user, session)
     else:
         return jsonify(registration_data), 400
 
 
 @user_api.route("/signOut", methods=["POST"])
-def user_sign_out():
-    print(session)
-
-    return {}
+@jwt_token_required
+def user_sign_out(user):
+    logout(session)
+    return {"msg": "Logged out"}
